error_collection.txt



[E0282] Error: type annotations needed
    ╭─[command_8:1:1]
    │
 19 │         PointSeries::of_element(&data, 5, &|pt| pt.0, &|pt| pt.1),
    │                                             ─┬│ ─┬  
    │                                              ╰────── error: type annotations needed
    │                                               │  │  
    │                                               ╰───── help: consider giving this closure parameter an explicit type: `: /* Type */`
    │                                                  │  
    │                                                  ╰── type must be known at this point
────╯

warning: use of deprecated method `plotters::chart::ChartBuilder::<'a, 'b, DB>::build_ranged`: `build_ranged` has been renamed to `build_cartesian_2d` and is to be removed in the future.
  --> main.rs:46:10
   |
46 |         .build_ranged(0..100, 0..1)?;
   |          ^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0599]: no method named `bin_width` found for struct `plotters::series::Histogram` in the current scope
  --> main.rs:55:18
   |
52 | / ...   Histogram::vertical(&chart)
53 | | ...       .style(RED.mix(0.5).filled())
54 | | ...       .data(age_values.iter().cloned().zip(survived_values.iter()....
55 | | ...       .bin_width(5.0),
   | |           -^^^^^^^^^ method not found in `Histogram<'_, _, f64>`
   | |___________|
   | 

For more information about this error, try `rustc --explain E0599`.         
warning: `pj001` (bin "pj001") generated 1 warning                 
error: could not compile `pj001` (bin "pj001") due to 1 previous error; 1 warning emitted
   Compiling pj001 v0.1.0 (/kaggle/working)
warning: use of deprecated method `plotters::chart::ChartBuilder::<'a, 'b, DB>::build_ranged`: `build_ranged` has been renamed to `build_cartesian_2d` and is to be removed in the future.
  --> main.rs:46:10
   |
46 |         .build_ranged(0..100, 0..1)?;
   |          ^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0599]: no method named `bin_width` found for struct `plotters::series::Histogram` in the current scope
  --> main.rs:55:18
   |
52 | / ...   Histogram::vertical(&chart)
53 | | ...       .style(RED.mix(0.5).filled())
54 | | ...       .data(age_values.iter().cloned().zip(survived_values.iter()....
55 | | ...       .bin_width(5.0),
   | |           -^^^^^^^^^ method not found in `Histogram<'_, _, f64>`
   | |___________|
   | 

For more information about this error, try `rustc --explain E0599`.         
warning: `pj001` (bin "pj001") generated 1 warning                 
error: could not compile `pj001` (bin "pj001") due to 1 previous error; 1 warning emitted

error[E0308]: mismatched types
 --> main.rs:4:21
  |
4 | const s: [i32; 5] = Series::new("a", &[1, 2, 3, 4, 5]);
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `[i32; 5]`, found `Series`

error: missing type for `const` item
 --> main.rs:4:8

error[E0425]: cannot find value `WHITE` in this scope  
   --> main.rs:112:16
    |
112 |     root.fill(&WHITE)?;
    |                ^^^^^ not found in this scope

thread 'main' panicked at main.rs:76:55:
called `Result::unwrap()` on an `Err` value: NotFound("hight")
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

thread 'main' panicked at /root/.cargo/registry/src/index.crates.io-6f17d22bba15001f/smartcore-0.2.1/src/model_selection/mod.rs:156:9:
number of sample is too small 0
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
